# SWENG-LCA

./: .gitignore  lca.cpp
cpp/: CMakeLists.txt  lca.cpp  lca.h  lca_test.cpp  run_tests.sh
python/: lca.py  lca_test.py  run_tests.sh
